# flight-disruption

./: .env.example  .env.truenas.example  .env.vps.example  .env.workingpc.example  .gitattributes  .gitignore  LICENSE  package.json
dbt/flight/: .env.example  .gitignore  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/flight/macros/: generate_schema_name.sql
dbt/flight/models/marts/: _marts.yml  agg_airport_hourly.sql  agg_airport_reliability.sql  agg_airport_worst_routes.sql  agg_carrier_reliability.sql  agg_hourly_patterns.sql  agg_route_carrier_reliability.sql  agg_route_reliability.sql  dim_airports.sql
dbt/flight/models/staging/: _sources.yml  _staging.yml  stg_airports.sql  stg_flights.sql
dbt/flight/seeds/: seed_airports.csv  seed_flights.csv
dbt/flight/tests/generic/: test_accepted_range.sql  test_unique_combination.sql
ingestion/: .env.example  README.md  pyproject.toml
ingestion/flight_ingest/: __init__.py  _http.py  bts.py  cli.py  config.py  openflights.py  opensky.py  weather.py
ingestion/tests/: conftest.py  test_bts.py  test_http.py  test_openflights.py  test_opensky.py  test_weather.py
lakehouse/: .env.example  Dockerfile  README.md  pyproject.toml
lakehouse/flight_lakehouse/: __init__.py  config.py  gold_features.py  holidays.py  run.py  session.py  silver.py  to_duckdb.py
lakehouse/tests/: conftest.py  test_gold_features.py  test_silver.py
ml/: .env.example  README.md  pyproject.toml
ml/artifacts/: feature_metadata.json
ml/flight_ml/: __init__.py  artifacts.py  baseline.py  calibrate.py  config.py  data.py  evaluate.py  explain.py  export_onnx.py  pipeline.py  registry.py  split.py  train.py
ml/reports/: calibration_curve.json  metrics.json
serving/: .env.example  pyproject.toml
serving/flight_serving/: __init__.py
shared/: pyproject.toml
shared/flight_contracts/: __init__.py  api_contract.md  contract.py
streaming/: .env.example  Dockerfile  README.md  pyproject.toml
streaming/flight_stream/: __init__.py  config.py  consumer.py  fetch.py  nats_io.py  oauth.py  producer.py  run.py  transform.py  valkey_io.py
streaming/kafka_showcase/: .env.example  README.md  docker-compose.kafka.yml  pyproject.toml  requirements-dev.txt  requirements.txt
streaming/kafka_showcase/producer/: __init__.py  config.py  messages.py  producer.py
streaming/kafka_showcase/spark_app/: __init__.py  geo.py  streaming_job.py
streaming/kafka_showcase/tests/: conftest.py  test_geo.py  test_messages.py  test_producer.py
streaming/tests/: test_consumer.py  test_fetch.py  test_oauth.py  test_producer.py  test_transform.py
