[project]
name = "flight-ingest"
version = "0.1.0"
description = "Ingestion layer for the Flight Disruption Platform: BTS, Open-Meteo, OpenSky, OpenFlights -> bronze parquet"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "flight-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
flight-ingest = "flight_ingest.cli:main"

[tool.uv.sources]
flight-contracts = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
