[project]
name = "flight-lakehouse"
version = "0.1.0"
description = "PySpark lakehouse (bronze -> silver -> gold feature engineering) for the Flight Disruption Platform"
requires-python = ">=3.11"
dependencies = [
    # Pinned to the 3.5 line: PySpark 4.x requires Java 17+, while 3.5 runs on
    # Java 8/11/17 — the broadest local compatibility for the showcase machine.
    "pyspark>=3.5,<4",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pandas>=2.1",
    "flight-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Delta is OFF by default; the default local run uses plain parquet. Install
# this extra and set LAKE_FORMAT=delta to enable Delta Lake output.
delta = [
    "delta-spark>=3.1",
]

[project.scripts]
flight-lakehouse = "flight_lakehouse.run:main"

[tool.uv.sources]
flight-contracts = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_lakehouse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
