[project]
name = "flight-ml"
version = "0.1.0"
description = "ML training pipeline (temporal split, base-rate baseline, calibration, SHAP, MLflow, ONNX) for the Flight Disruption Platform"
requires-python = ">=3.11"
dependencies = [
    "flight-contracts",
    "lightgbm>=4.1",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "mlflow>=2.9",
    "onnxmltools>=1.12",
    "onnxconverter-common>=1.13",
    "skl2onnx>=1.16",
    "onnxruntime>=1.16",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "duckdb>=0.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
flight-ml = "flight_ml.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_ml"]

# flight-contracts is a sibling path dependency (shared/). uv reads this table.
[tool.uv.sources]
flight-contracts = { path = "../shared", editable = true }

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
