[project]
name = "flight-serving"
version = "0.1.0"
description = "FastAPI serving layer for the Flight Disruption Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "duckdb>=1.0",
    "redis>=5.0",
    "boto3>=1.34",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.26",
    # path deps to the shared contracts + consumed packages
    "flight-contracts",
    "flight-ml",
    "flight-ingest",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
flight-contracts = { path = "../shared", editable = true }
flight-ml = { path = "../ml", editable = true }
flight-ingest = { path = "../ingestion", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_serving"]

[tool.pytest.ini_options]
# -p no:pycodestyle guards against a broken global pycodestyle pytest plugin in
# some dev envs (incompatible hookspec); harmless when the plugin is absent.
addopts = "-q -p no:pycodestyle"
testpaths = ["tests"]
