[project]
name = "flight-contracts"
version = "0.1.0"
description = "Shared contracts (feature/leakage contract, schemas, paths) for the Flight Disruption Platform"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_contracts"]
